--- a/package.json
+++ b/package.json
@@ -13,13 +13,10 @@
     "bedrock-mongodb": "^3.0.2",
     "bedrock-passport": "^3.0.0",
     "bedrock-permission": "^2.3.0",
-    "bedrock-requirejs": "^2.0.0",
-    "bedrock-rest": "^2.0.0",
-    "bedrock-server": "^2.0.0",
-    "bedrock-session-http": "^3.0.0"
+    "bedrock-server": "^2.0.0"
   },
   "engines": {
     "node": ">=4.0.0"
   },
-  "main": "./lib/notification"
+  "main": "./lib/index"
 }
