--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
   "name": "bedrock-credential-notifications",
   "version": "0.0.4-0",
+  "description": "Bedrock Credential Notifications",
   "scripts": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/digitalbazaar/bedrock-credential-notifications"
+  },
+  "keywords": [
+    "bedrock"
+  ],
+  "author": {
+    "name": "Digital Bazaar, Inc.",
+    "email": "support@digitalbazaar.com",
+    "url": "http://digitalbazaar.com"
+  },
+  "bugs": {
+    "url": "https://github.com/digitalbazaar/bedrock-credential-notifications"
+  },
+  "homepage": "https://github.com/digitalbazaar/bedrock-credential-notifications",
   "dependencies": {
     "async": "^1.5.2"
   },
@@ -20,3 +37,4 @@
   },
   "main": "./lib/index"
 }
+
