--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-credential-notifications",
-  "version": "0.0.4",
+  "version": "0.0.5-0",
   "description": "Bedrock Credential Notifications",
   "scripts": {},
   "repository": {
