--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-credential-notifications",
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "description": "Bedrock Credential Notifications",
   "scripts": {},
   "repository": {
